--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
